alterando o index.html e index.js

--- a/appweb/public/index.html
+++ b/appweb/public/index.html
@@ -6,7 +6,7 @@
 <body style="text-align: center;" >
   <h1>App web</h1>
   <p>O documento html é voltado para a publicação na internet</p>
-  <form action="dosave" method="GET" style="position: relative;" >
+  <form action="dosave" method="POST" style="position: relative;" >
     <label>Nome</label><br/>
     <input name="nome"/><br/>
     <label>Endereço</label><br/>
