pagina numero.html

--- a/appweb/public/index.html
+++ b/appweb/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
+  <meta charset="UTF-8">
   <title>App web</title>
 </head>
 <body style="text-align: center;" >
